@@ -1375,8 +1375,8 @@ def add_mainframe_menu(menulist):
             (120, 'IDM_EDIT_FORMAT_TABTOSPACE', tr('Leading Tabs To Spaces'), wx.ITEM_NORMAL, 'OnEditFormatTabToSpace', tr('Converts leading tabs to spaces')),
             (125, 'IDM_EDIT_FORMAT_ALLTABTOSPACE', tr('ALL Tabs To Spaces'), wx.ITEM_NORMAL, 'OnEditFormatAllTabToSpace', tr('Converts all tabs to spaces')),
             (130, '', '-', wx.ITEM_SEPARATOR, None, ''),
-            (140, 'IDM_EDIT_FORMAT_INDENT', tr('Increase Indent'), wx.ITEM_NORMAL, 'OnEditFormatIndent', tr('Increases the indentation of current line or selected block')),
-            (150, 'IDM_EDIT_FORMAT_UNINDENT', tr('Decrease Indent'), wx.ITEM_NORMAL, 'OnEditFormatUnindent', tr('Decreases the indentation of current line or selected block')),
+            (140, 'IDM_EDIT_FORMAT_INDENT', tr('Increase Indent')+'\tTab', wx.ITEM_NORMAL, 'OnEditFormatIndent', tr('Increases the indentation of current line or selected block')),
+            (150, 'IDM_EDIT_FORMAT_UNINDENT', tr('Decrease Indent')+'\tShift+Tab', wx.ITEM_NORMAL, 'OnEditFormatUnindent', tr('Decreases the indentation of current line or selected block')),
             (160, '', '-', wx.ITEM_SEPARATOR, None, ''),
             (170, 'IDM_EDIT_FORMAT_COMMENT', tr('Line Comment...') + '\tE=Ctrl+/', wx.ITEM_NORMAL, 'OnEditFormatComment', tr('Inserts comment sign at the beginning of line')),
             (180, 'IDM_EDIT_FORMAT_UNCOMMENT', tr('Line Uncomment...') + '\tE=Ctrl+\\', wx.ITEM_NORMAL, 'OnEditFormatUncomment', tr('Removes comment sign at the beginning of line')),
@@ -2944,7 +2944,7 @@ from modules import common
 from modules.HyperLinksCtrl import HyperLinkCtrl, EVT_HYPERLINK_LEFT
 from modules import Globals
 
-homepage = 'http://wiki.woodpecker.org.cn/moin/UliPad'
+homepage = 'http://code.google.com/p/ulipad/'
 blog = 'http://www.donews.net/limodou'
 email = 'limodou@gmail.com'
 author = 'limodou'
